# hakorune

./: .ai-ignore  .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT_PRO_CONSULT.md  CHATGPT_PRO_QUESTION_shortcircuit_joins.md  CLAUDE.md  CLAUDE_WASM_TASK.md  CODEX.md  CURRENT_TASK.md  CURRENT_TASK_ARCHIVE_2026-01-23.md  Cargo.toml  HAKORUNE_RUST_CLEANUP_CAMPAIGN.md  Makefile  README.ja.md  README.md  basic_test.hako  build.err  build.rs  build_aot_only.ps1  build_check.sh  build_llvm.sh  build_llvm_wsl.sh  build_llvm_wsl_msvc.sh  build_ps.ps1  build_simple.ps1  create_dummy_ffi_ps.ps1  gemini_test_case.hako  hako.toml  nyash.toml  nyash_box.toml  stageb_funcscan_demo.hako  test.hako  test_joinir_debug.rs  test_len_any  test_numeric_core_phi.sh  todos.db
.cargo/: config.toml
.claude/: claude_desktop_config.json
.github/: mlc_config.json  pull_request_template.md
apps/: AI_TEACHERS_FULL_CONVERSATIONS.md  AI_TEACHERS_PURE_NYASH_CONVERSATIONS.md  AI_TEACHERS_SUGGESTIONS.md  DELETE_THESE.txt  LLVM_TEST_PROGRAMS.md  README.md  tmp_array_len_probe.hako  tmp_hello.hako  tmp_if_min.hako  tmp_if_return.hako  tmp_if_return_true.hako  tmp_include_only.hako  tmp_include_string_std.hako  tmp_include_test.hako  tmp_index_of_test.hako  tmp_len_min.hako  tmp_len_probe.hako  tmp_len_stringbox_probe.hako  tmp_len_test.hako  tmp_len_test2.hako  tmp_mod.hako  tmp_new_array_plugin.hako  tmp_string_probe.hako
benchmarks/: README.md  bench_aot_len_heavy.hako  bench_aot_len_light.hako  bench_aot_len_medium.hako  bench_box_create_destroy.hako  bench_box_create_destroy_small.hako  bench_chip8_kernel_small.hako  bench_compare_reuse_small.hako  bench_kilo_kernel_small.hako  bench_kilo_leaf_array_rmw_add1.hako  bench_kilo_leaf_array_string_indexof_const.hako  bench_kilo_leaf_array_string_len.hako  bench_kilo_leaf_map_get_missing.hako  bench_kilo_leaf_map_getset_has.hako  bench_kilo_meso_indexof_append_array_set.hako  bench_kilo_meso_substring_concat_array_set.hako  bench_kilo_meso_substring_concat_array_set_loopcarry.hako  bench_kilo_meso_substring_concat_len.hako  bench_kilo_micro_array_getset.hako  bench_kilo_micro_array_string_store.hako  bench_kilo_micro_concat_birth.hako  bench_kilo_micro_concat_const_suffix.hako  bench_kilo_micro_concat_hh_len.hako  bench_kilo_micro_indexof_line.hako  bench_kilo_micro_len_substring_views.hako  bench_kilo_micro_substring_concat.hako  bench_kilo_micro_substring_only.hako  bench_kilo_micro_substring_views_only.hako  bench_kilo_micro_userbox_counter_step.hako  bench_kilo_micro_userbox_counter_step_chain.hako  bench_kilo_micro_userbox_flag_toggle.hako  bench_kilo_micro_userbox_point_add.hako  bench_kilo_micro_userbox_point_sum.hako  bench_method_call_only.hako  (+2 more)
crates/nyash-llvm-compiler/: Cargo.toml  README.md
crates/nyash-llvm-compiler/src/: boundary_driver.rs  boundary_driver_defaults.rs  boundary_driver_ffi.rs  compile_input.rs  driver_dispatch.rs  harness_driver.rs  link_driver.rs  main.rs  native_driver.rs  native_ir.rs
crates/nyash-next/: Cargo.toml
crates/nyash-next/src/: lib.rs  main.rs
crates/nyash_kernel/: Cargo.toml  README.md  build.rs
crates/nyash_kernel/src/: encode.rs  entry.rs  hako_forward.rs  hako_forward_bridge.rs  hako_forward_registry.c  lib.rs  perf_counters.rs  test_support.rs  tests.rs  user_box_registry.rs
crates/nyash_kernel/src/exports/: README.md  any.rs  atomic.rs  birth.rs  box_helpers.rs  cmp.rs  env.rs  file.rs  instance.rs  mem.rs  mod.rs  osvm.rs  primitive.rs  runtime.rs  stage1.rs  string.rs  string_birth_placement.rs  string_debug.rs  string_helpers.rs  string_plan.rs  string_search.rs  string_span_cache.rs  string_trace.rs  string_view.rs  tls.rs  typed_object.rs  user_box.rs  worker.rs
crates/nyash_kernel/src/exports/string_helpers/: cache.rs  concat.rs  materialize.rs  tests.rs
crates/nyash_kernel/src/exports/string_helpers/concat/: const_adapter.rs  piecewise.rs  substring.rs
crates/nyash_kernel/src/exports/string_view/: span_resolve.rs  substring_plan.rs
crates/nyash_kernel/src/ffi/: lifecycle.rs  mod.rs  weak.rs
crates/nyash_kernel/src/observe/: README.md  backend_atomic.rs  backend_tls.rs  config.rs  contract.rs  mod.rs  real_no_perf_observe.rs  real_perf_observe.rs  sink_stderr.rs  trace.rs
crates/nyash_kernel/src/observe/backend/: mod.rs  tls.rs
crates/nyash_kernel/src/observe/backend/tls/: api.rs  birth.rs  const_suffix.rs  flush.rs  methods.rs  routes.rs  state.rs  store_array_str.rs  tests.rs
crates/nyash_kernel/src/observe/sink/: mod.rs  stderr.rs
crates/nyash_kernel/src/plugin/: README.md  array.rs  array_compat.rs  array_guard.rs  array_handle_cache.rs  array_index_helpers.rs  array_route_helpers.rs  array_runtime_aliases.rs  array_runtime_any.rs  array_runtime_facade.rs  array_runtime_substrate.rs  array_slot_append.rs  array_slot_capacity.rs  array_slot_load.rs  array_slot_store.rs  array_string_slot.rs  array_string_slot_helpers.rs  array_string_slot_indexof.rs  array_string_slot_store.rs  array_string_slot_write.rs  array_substrate.rs  array_text_write_txn.rs  array_write_dispatch.rs  birth.rs  compat_invoke_core.rs  console.rs  future.rs  handle_cache.rs  handle_helpers.rs  instance.rs  intarray.rs  invoke.rs  invoke_core.rs  map.rs  map_aliases.rs  map_compat.rs  map_debug.rs  map_key_codec.rs  map_probe.rs  map_runtime_data.rs  (+16 more)
crates/nyash_kernel/src/plugin/invoke/: by_id.rs  by_name.rs  instance_fields.rs  tagged.rs  tests.rs
crates/nyash_kernel/src/plugin/module_string_dispatch/: README.md  build_surrogate.rs  llvm_backend_surrogate.rs
crates/nyash_kernel/src/plugin/module_string_dispatch/compat/: llvm_backend_surrogate.rs
crates/nyash_kernel/src/plugin/value_codec/: borrowed_handle.rs  decode.rs  encode.rs  mod.rs  string_classify.rs  string_materialize.rs  string_store.rs  tests.rs  text_carrier.rs
crates/nyash_kernel/src/plugin/value_codec/borrowed_handle/: backing.rs  box_impl.rs
crates/nyash_kernel/src/tests/: filebox.rs  mimalloc_parallel_substrate.rs  string.rs
dev/: README.md
plugins/nyash-egui-plugin/: Cargo.toml
plugins/nyash-egui-plugin/src/: lib.rs
(+15831 files in other folders)
