[package]
name = "nyash-llvm-compiler"
version = "0.1.0"
edition = "2021"
description = "Nyash LLVM compiler CLI (harness wrapper). Compiles MIR(JSON) -> object (.o) or dummy."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "ny-llvmc"
path = "src/main.rs"
