[package]
name = "nyash-llvm-compiler"
version = "0.1.0"
edition = "2021"
description = "Nyash LLVM backend helper CLI. Compiles MIR(JSON) -> object/executable through boundary or keep lanes."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"
serde_json = "1.0"

[[bin]]
name = "ny-llvmc"
path = "src/main.rs"
