[package]
name = "nyash_kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []
perf-observe = []

[lib]
name = "nyash_kernel"
crate-type = ["staticlib", "rlib"]

[dependencies]
nyash-rust = { path = "../../" }
serde_json = "1.0"  # Phase 285LLVM-1.1: For parsing fields JSON
memchr = "2"

[build-dependencies]
cc = "1"
